# mecab-chn

./: README.md
data/: README.md
mecab/: Makefile  config.status  libtool
mecab/doc/: Makefile
mecab/man/: Makefile
mecab/python/: MeCab_wrap.cxx  README.md  setup.py
mecab/python/mecab/: MeCab.py  __init__.py  options.py  pair.py  textrank.py  tfidf.py
mecab/src/: CMakeLists.txt  Makefile  common.h  mecab  mecab-cost-train  mecab-dict-gen  mecab-dict-index  mecab-system-eval  mecab-test-gen
mecab/src/.libs/: libmecab.so.2.0.0  lt-mecab  lt-mecab-cost-train  lt-mecab-dict-gen  lt-mecab-dict-index  lt-mecab-system-eval  lt-mecab-test-gen
mecab/tests/: Makefile
